[package]
name = "idl-macro"
version = "0.1.0"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/idl-macro"
license = "Apache-2.0"
keywords = ["solana", "anchor"]

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
serde_json = "1.0.81"
anchor-syn = { version = "0.24.2", features = ["idl"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anchor-lang = "0.24.2"
