[package]
name = "anchor-gen"
version = "0.2.0"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
anchor-idl = { version = "0.2.0", path = "../crates/anchor-idl" }
serde_json = "1.0.81"
anchor-syn = { version = "0.24.2", features = ["idl"] }
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anchor-lang = "0.24.2"
