[package]
name = "anchor-idl"
version = "0.4.1"
edition = "2021"
description = "Generates Rust code from an Anchor IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]

[features]
compat-program-result = []

[dependencies]
anchor-lang-idl-spec = "0.1.0"
darling = "0.14"
heck = "0.4.1"
proc-macro2 = "1"
quote = "1"
serde_json = "1.0.108"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anchor-lang = "0.31.1"
